# ros-example

./: .gitignore  Jenkinsfile  Makefile  README.MD  launch_app.sh  run.sh
host_machine/: requirements.sh
video_record/: Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh
video_record/src/: CMakeLists.txt  video_record.cpp
view_rosbag/: Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh
view_rosbag/src/: CMakeLists.txt  view_rosbag.cpp
